# sensor-mcp

./: README.md  index.html  pyproject.toml
src/: __init__.py  image_utils.py  models.py  server.py  state.py  zoo_mcp.py
