[project]
name = "sensor-mcp"
version = "0.1.0"
description = "A minimal Python MCP Server template using the Model Context Protocol SDK"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.18.0",
    "autodistill>=0.1.29",
    "autodistill-grounded-sam>=0.1.2",
    "autodistill-yolov8>=0.1.4",
    "mcp[cli]>=0.0.17",
    "python-dotenv>=1.0.0",
    "rf-groundingdino>=0.2.0",
    "rf-segment-anything>=1.0",
    "roboflow>=1.1.63",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]


[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-asyncio",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["server/"]

[tool.ruff]
lint.select = ["E", "F", "B", "I", "PL"]
line-length = 100
target-version = "py313"
